--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,8 +2,12 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 */6 * * *" # every 6 hours
+    - cron: "0 */6 * * *"  # Runs every 6 hours
   workflow_dispatch:
+
+# 🔐 Give the workflow permission to write to branches
+permissions:
+  contents: write
 
 jobs:
   generate:
